# bitrecs-subnet

./: .env.dev.example  .gitignore  README.md  pyproject.toml
.github/workflows/: sync-upstream.yml
bitrecs/: __init__.py
bitrecs/api/: api_server.py
bitrecs/base/: validator.py
bitrecs/base/utils/: weight_utils.py
bitrecs/llms/: factory.py  llm_provider.py  open_router.py  prompt_factory.py
bitrecs/utils/: __init__.py  config.py  constants.py  logging.py  r2.py  reasoning.py
bitrecs/validator/: __init__.py  reward.py
docs/: verified_inference.md
neurons/: miner.py  validator.py
tests/: test_distance.py  test_json.py  test_llm.py  test_llm_2.py  test_llm_cloud.py  test_meta.py  test_order_predict.py  test_path.py  test_reason.py  test_verified_inf.py  test_wandb.py
